--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+	.clip-modal {
+		clip-path: polygon(
+			0% 30px,
+			30px 0%,
+			calc(100% - 30px) 0%,
+			100% 30px,
+			100% calc(100% - 30px),
+			calc(100% - 30px) 100%,
+			30px 100%,
+			0 calc(100% - 30px)
+		);
+	}
+
+	.clip-button {
+		clip-path: polygon(
+			0% 10px,
+			10px 0%,
+			calc(100% - 10px) 0%,
+			100% 10px,
+			100% calc(100% - 10px),
+			calc(100% - 10px) 100%,
+			10px 100%,
+			0 calc(100% - 10px)
+		);
+	}
+}
+
 body {
 	background: url('./assets/bg.jpeg');
 	background-repeat: no-repeat;
@@ -19,10 +47,3 @@ body > div {
 	min-height: 100vh;
 	backdrop-filter: blur(3px);
 }
-
-/*
-Palette
-orange: #ea550d
-yellow: #f5a300
-brown: #4d330a
-*/
